--- a/Styles/exhibition-spaces.css
+++ b/Styles/exhibition-spaces.css
@@ -9,7 +9,7 @@
 }
 h1{
     position: absolute;
-    font-weight: 300;
+    font-weight: 500;
     color: rgb(13, 34, 24);
 }
 .exhibition-spaces-h1-box{
